updates to tabs, permission sets, describe driven by custom metadata type setting

--- a/force-app/main/default/lwc/cacheDemo/cacheDemo.html
+++ b/force-app/main/default/lwc/cacheDemo/cacheDemo.html
@@ -18,7 +18,9 @@
             </div>
         </template>
         <template if:true={displayError}>
-            <p> There was an error, check the logs </p>
+            <p> There was an error, check the logs<br/> 
+                {errorMessage}
+            </p>
         </template>
 
     </lightning-card>
